--- a/src/components/dialog/dialog.css
+++ b/src/components/dialog/dialog.css
@@ -163,3 +163,16 @@
 	top: 20%;
 	left: 35%;
 }
+.j-dialog-progress{
+	padding: 30px 50px 10px 50px;
+	background-color: #fff;
+	border-radius: 3px;
+	min-width: 250px;
+	color: #555;
+	transform: scale(0);
+	transition: transform 0.3s;
+	font-size: 12px;
+}
+.j-progress-background{width: 100%;height: 8px;background-color: #ddd;border-radius: 4px;}
+.j-progress-current{width: 0%;height: 8px;background-color: #32CD32;border-radius: 4px;position: relative;bottom: 8px;transition: width 0.2s;max-width: 100%;}
+.j-dialog-progress span{margin-left: 5px;}
